@@ -7,4 +7,4 @@
 - add breaking of long lines (Zaba? patch? :)
 - add connect/auth timeout to AE::IRC::Connection & prepare cb
   31 14:37:50 <Sadrak|work>  }, $arg{on_prepare} || sub { $timeout };
-
+  - TEST IT!
